fixing squishing event box images and marker shadow

--- a/interactivesBackend/photoMap/static/photoMap/css/custom.css
+++ b/interactivesBackend/photoMap/static/photoMap/css/custom.css
@@ -90,13 +90,8 @@ html, body {
 	width: 100%;
 	height: 100%;
 	background-size: cover;
+	background-position: center;
 }
-
-/* .event img {
-	padding-top: 5px;
-	height: 95%;
-	width: 200px;
-} */
 
 .event h2 {
 	text-align: center;
